working on sports page for lab

--- a/sports.html
+++ b/sports.html
@@ -9,7 +9,9 @@
     <header>
       <h1>LOCAL SPORTS</h1>
     </header>
-    <main></main>
+    <main>
+      <img src="https://cna-sg-res.cloudinary.com/image/upload/q_auto,f_auto/image/11908672/16x9/991/557/5b227edcbd0cfe0e568aa96cc05cab95/kG/england-cricket.jpg" alt="cricket at its best">
+    </main>
     <footer></footer>
   </body>
 </html>
