--- a/sports.html
+++ b/sports.html
@@ -10,8 +10,12 @@
       <h1>LOCAL SPORTS</h1>
     </header>
     <main>
-      <img src="https://cna-sg-res.cloudinary.com/image/upload/q_auto,f_auto/image/11908672/16x9/991/557/5b227edcbd0cfe0e568aa96cc05cab95/kG/england-cricket.jpg" alt="cricket at its best">
+      <img
+        src="https://cna-sg-res.cloudinary.com/image/upload/q_auto,f_auto/image/11908672/16x9/991/557/5b227edcbd0cfe0e568aa96cc05cab95/kG/england-cricket.jpg"
+        alt="cricket at its best"
+      />
     </main>
+    <a href="index.html">Home Page</a>
     <footer></footer>
   </body>
 </html>
