added navigation to sports page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <p>More than 20 vehicles became stranded on a snowy northeast back road last Wednesday, Nov. 20, after GPS directions sent them onto an unsafe route, the Union County Sheriff’s Office said.</p>
       <h2>Pet Pig Lights Up Old Folks Home with Cuddly Demeanor and Love for Cereal</h2>
       <p>A maintenance worker at a care home has begun bringing his pet pig to work, putting smiles on the faces of many of the residents.</p>
+      <a href="sports.html"> Local Sports</a>
     </header>
     <main></main>
     <footer></footer>
