added another image

--- a/sports.html
+++ b/sports.html
@@ -12,7 +12,8 @@
     <main>
       <img
         src="https://cna-sg-res.cloudinary.com/image/upload/q_auto,f_auto/image/11908672/16x9/991/557/5b227edcbd0cfe0e568aa96cc05cab95/kG/england-cricket.jpg"
-        alt="cricket at its best"
+        alt="cricket at its best" width="200" height="100
+        "
       />
     </main>
     <a href="index.html">Home Page</a>
