--- a/sports.html
+++ b/sports.html
@@ -9,7 +9,7 @@
     <header>
       <h1>LOCAL SPORTS</h1>
     </header>
-    <main></main>
+    <main>
     <h2>Cricket at Its Best</h2>
     <p>
       A powerful batting performance underpinned England's 36-run victory in
@@ -33,8 +33,8 @@
     alt="kickball" width="300" height="200"/> <img src
     =https://cdn2.hubspot.net/hubfs/2781691/Blog%20Images/Playing-yo-yo-300-400.jpg
     alt="yoyo" width="300" height="200"
-
-    <a href = "index.html"a> Home Page </a>
+    <a href="index.html" a> Home Page </a>
   </body>
+  </main>
   <footer></footer>
 </html>
