trying to add image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <main>
     <header>
       <h1>LOCAL NEWS</h1>
       <h2>
@@ -25,7 +26,7 @@
       <p>A maintenance worker at a care home has begun bringing his pet pig to work, putting smiles on the faces of many of the residents.</p>
      
     </header>
-    <main></main>
+    </main>
     <footer></footer>
   </body>
 </html>
