--- a/sports.html
+++ b/sports.html
@@ -34,7 +34,9 @@
     <h2>Yo,YO,YO</h2>
     <p>Cloud Native Inc. Presents the World Yo-Yo Contest 2023 was successfully held in-person for the first time in four years.</p>
     <p>More than 3300 people attended the event in Osaka, Japan over 4 days, with 367 contest registrations of competitors representing 27 countries and regions</p>
-    <img src="(https://github.com/user-attachments/assets/113d640e-5fba-4d13-ad4a-8093a7c4dd69)" alt="yo yoing man">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQgpUuCaivk0IK9ePWjnk8qhdhmKZ4CQsm6mg&s"
+     alt= "watch me go" width="300" height="275"
+
   </body>
   </main>
   <footer></footer>
