--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <header>
-        <h1>LOCAL NEWS</h1>
-        <h2>
-          Proposed waste repository site draws criticism at community meeting
-        </h2>
+    <header>
+      <h1>LOCAL NEWS</h1>
+    </header>
+
+    <main class="background-yellow">
+      <section>
+      <h2>
+        Proposed waste repository site draws criticism at community meeting
+      </h2>
+      <p>
+        About 70 people attended a meeting at the Fire Hall last week where
+        representatives of Atlantic Richfield gave a presentation showing
+        several possible sites proposed for a waste repository near the Kelley
+        Mine Yard.
+      </p>
+      </section>
+      
+      <section>
+        <h2>Over 20 cars trapped on snowy road after GPS failure</h2>
         <p>
-          About 70 people attended a meeting at the Fire Hall last week where
-          representatives of Atlantic Richfield gave a presentation showing
-          several possible sites proposed for a waste repository near the Kelley
-          Mine Yard.
+          More than 20 vehicles became stranded on a snowy northeast back road
+          last Wednesday, Nov. 20, after GPS directions sent them onto an unsafe
+          route, the Union County Sheriff’s Office said.
         </p>
-        <section>
-          <h2>Over 20 cars trapped on snowy road after GPS failure</h2>
-          <p>
-            More than 20 vehicles became stranded on a snowy northeast back road
-            last Wednesday, Nov. 20, after GPS directions sent them onto an
-            unsafe route, the Union County Sheriff’s Office said.
-          </p>
-        </section>
-        <h2>
-          Pet Pig Lights Up Old Folks Home with Cuddly Demeanor and Love for
-          Cereal
-        </h2>
-        <p>
-          A maintenance worker at a care home has begun bringing his pet pig to
-          work, putting smiles on the faces of many of the residents.
-        </p>
-      </header>
+      </section>
+      <h2>
+        Pet Pig Lights Up Old Folks Home with Cuddly Demeanor and Love for
+        Cereal
+      </h2>
+      <p>
+        A maintenance worker at a care home has begun bringing his pet pig to
+        work, putting smiles on the faces of many of the residents.
+      </p>
     </main>
     <footer></footer>
   </body>
