--- a/index.html
+++ b/index.html
@@ -7,24 +7,23 @@
     <title>Local News |html lab 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="background-yellow">
     <header>
       <h1>LOCAL NEWS</h1>
     </header>
-
-    <main class="background-yellow">
-      <section>
-      <h2>
-        Proposed waste repository site draws criticism at community meeting
-      </h2>
-      <p>
-        About 70 people attended a meeting at the Fire Hall last week where
-        representatives of Atlantic Richfield gave a presentation showing
-        several possible sites proposed for a waste repository near the Kelley
-        Mine Yard.
-      </p>
+    
+    <main>
+        <h2>
+          Proposed waste repository site draws criticism at community meeting
+        </h2>
+        <p>
+          About 70 people attended a meeting at the Fire Hall last week where
+          representatives of Atlantic Richfield gave a presentation showing
+          several possible sites proposed for a waste repository near the Kelley
+          Mine Yard.
+        </p>
       </section>
-      
+
       <section>
         <h2>Over 20 cars trapped on snowy road after GPS failure</h2>
         <p>
@@ -41,6 +40,9 @@
         A maintenance worker at a care home has begun bringing his pet pig to
         work, putting smiles on the faces of many of the residents.
       </p>
+      <section>
+<nav><a href="Local Sports.html">Local Sports</a></nav>
+
     </main>
     <footer></footer>
   </body>
