changed name to match file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         work, putting smiles on the faces of many of the residents.
       </p>
       <section>
-<nav><a href="Local Sports.html">Local Sports</a></nav>
+<nav><a href="sports.html">Local Sports</a></nav>
 
     </main>
     <footer></footer>
