added navigation from home page

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       </p>
       <section>
 <nav><a href="sports.html">Local Sports</a></nav>
-
-    </main>
+<nav><a href="economics.html">Local Economy</a></nav>
+  </main>
     <footer></footer>
   </body>
 </html>
