--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
       <section>
 <nav><a href="sports.html">Local Sports</a></nav>
-<nav><a href="economics.html">Local Economy</a></nav>
+<nav><a href="economy.html">Local Economy</a></nav>
   </main>
     <footer></footer>
   </body>
