working with style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Local News |html lab 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="background-yellow">
+  <body class="background-blue": text="gray
+  ">
     <header>
       <h1>LOCAL NEWS</h1>
     </header>
