--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Local News |html lab 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="background-blue": text="gray
-  ">
-    <header>
+  <body
+    class="background-blue":"text-gray"
+
+  "
+  >
+    <header >
       <h1>LOCAL NEWS</h1>
     </header>
-    
-    <main>
+    <main class="d-flex">
+      <section>
         <h2>
           Proposed waste repository site draws criticism at community meeting
         </h2>
@@ -33,18 +36,19 @@
           route, the Union County Sheriff’s Office said.
         </p>
       </section>
-      <h2>
-        Pet Pig Lights Up Old Folks Home with Cuddly Demeanor and Love for
-        Cereal
-      </h2>
-      <p>
-        A maintenance worker at a care home has begun bringing his pet pig to
-        work, putting smiles on the faces of many of the residents.
-      </p>
       <section>
-<nav><a href="sports.html">Local Sports</a></nav>
-<nav><a href="economy.html">Local Economy</a></nav>
-  </main>
+        <h2>
+          Pet Pig Lights Up Old Folks Home with Cuddly Demeanor and Love for
+          Cereal
+        </h2>
+        <p>
+          A maintenance worker at a care home has begun bringing his pet pig to
+          work, putting smiles on the faces of many of the residents.
+        </p>
+      </section>
+      <nav><a href="sports.html">Local Sports</a></nav>
+      <nav><a href="economy.html">Local Economy</a></nav>
+    </main>
     <footer></footer>
   </body>
 </html>
