--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body
-    class="background-blue":"text-gray"
+    class="background-blue":
 
   "
   >
