--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       <nav><a href="sports.html">Local Sports</a></nav>
       <nav><a href="economy.html">Local Economy</a></nav>
     </main>
-    <footer></footer>
+    <footer>LW 2024</footer>
   </body>
 </html>
