--- a/sports.html
+++ b/sports.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content=" Local News | lab 2" />
     <title>Local News|html lab 2</title>
+    <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
     <header>
