--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body
-    class="background-light gray":
-  "
+    class="background-light
+    gray":
+  
   >
     <header >
       <h1>LOCAL NEWS</h1>
