page break added

--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
     <title>Local News |html lab 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body
-    class="background-light
-    gray":
-  
-  >
-    <header >
+  <body class="background-light gray" :>
+    <header>
       <h1>LOCAL NEWS</h1>
     </header>
     <main class="d-flex">
@@ -22,9 +18,10 @@
         </h2>
         <p>
           About 70 people attended a meeting at the Fire Hall last week where
-          representatives of Atlantic Richfield gave a presentation showing
-          several possible sites proposed for a waste repository near the Kelley
-          Mine Yard.
+          representatives of
+          <br />
+          Atlantic Richfield gave a presentation showing several possible sites
+          proposed for a waste repository near the Kelley Mine Yard.
         </p>
       </section>
 
