--- a/economy.html
+++ b/economy.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content=" Local News | lab 2" />
     <title>Local News|html lab 2</title>
+    <link rel="stylesheet" href="style2.css">
   </head>
-  <body>
+  <body class="background color">
     <header>
       <h1>LOCAL ECONOMICS</h1>
     </header>
+    <nav><a href="index.html">Home Page</a></nav>
     <main></main>
     <footer></footer>
   </body>
