learning more about styling

--- a/economy.html
+++ b/economy.html
@@ -9,8 +9,16 @@
   </head>
   <body class="background color">
     <header>
-      <h1>LOCAL ECONOMICS</h1>
+      <h1>LOCAL ECONOMY</h1>
     </header>
+    <table></table>
+    <thead>Share Holder</thead>
+    <tr></tr>
+    <th>Holdings</th>
+    <th>Total Value</th>
+    <th>% of Holdings</th>
+    <th> Up or Down</th>
+    <td></td>
     <nav><a href="index.html">Home Page</a></nav>
     <main></main>
     <footer></footer>
