--- a/economy.html
+++ b/economy.html
@@ -5,22 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content=" Local News | lab 2" />
     <title>Local News|html lab 2</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style3.css" />
   </head>
-  <body class="background color">
+  <body class="background color" lightgoldenrodyellow>
     <header>
       <h1>LOCAL ECONOMY</h1>
     </header>
-    <table></table>
-    <thead>Share Holder</thead>
-    <tr></tr>
-    <th>Holdings</th>
-    <th>Total Value</th>
-    <th>% of Holdings</th>
-    <th> Up or Down</th>
-    <td></td>
-    <nav><a href="index.html">Home Page</a></nav>
+    <table>
+      <thead>
+        <h2>STOCKS</h2>
+      </thead>
+      <tr>
+          <th>Share Holder</th>
+          <th>Holdings</th>
+          <th>Total Value</th>
+          <th>% of Holdings</th>
+          <th>Up or Down</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr>
+           <td>Alice</td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+        </tr>
+        <tr>
+          <td>Bob</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Charlie</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Donna</td>
+          <Td></Td>
+          <Td></Td>
+          <Td></Td>
+          <Td></Td>
+        </tr>
+        <tr>
+          <td>Edward</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        
+        </tr>
+           </tbody>
+      
+    </table>
+
     <main></main>
+    <nav><a href="index.html">Home Page</a></nav>
     <footer></footer>
   </body>
 </html>
