--- a/economy.html
+++ b/economy.html
@@ -57,15 +57,12 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
-        
+          <td></td>  
         </tr>
            </tbody>
-      
-    </table>
+        </table>
 
-    <main></main>
     <nav><a href="index.html">Home Page</a></nav>
-    <footer></footer>
+    <footer> Copyright LW 2024</footer>
   </body>
 </html>
