--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       <nav><a href="sports.html">Local Sports</a></nav>
       <nav><a href="economy.html">Local Economy</a></nav>
     </main>
-    <footer>LW 2024</footer>
+    <footer> Copyright LW 2024</footer>
   </body>
 </html>
