--- a/sports.html
+++ b/sports.html
@@ -61,6 +61,6 @@
       </section>
       <nav><a href="index.html">Home Page</a></nav>
     </main>
-    <footer></footer>
+    <footer>Copyright LW 2024</footer>
   </body>
 </html>
